--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,121 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+  padding-top: 5em;
+  padding-bottom: 5em;
+  height: 100vh;
+  background-color: rgb(237, 237, 237);
+}
+
+@media(min-width: 768px){
+  body{
+    margin-left: 10em;
+    margin-right: 10em;
+  }
+}
+
+.tab-active{
+  border-bottom: 4px rosybrown solid;
+  padding-bottom: 0.5em;
+}
+
+form{
+  display: flex;
+  background-color: white;
+  align-items: center;
+  padding: 1em;
+  flex-direction: column;
+}
+
+input{
+  padding: 0.5em;
+  font-size: 2em;
+  flex: 1;
+  border: none;
+}
+
+input:focus{
+  outline: none;
+}
+
+button{
+  padding: 0.5em;
+  font-size: 2em;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+}
+
+.recipe-grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2em;
+}
+
+.recipe-card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: white;
+  border-radius: 1em;
+  padding: 1em;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+  position: relative;
+  cursor: pointer;
+  gap: 1.5em;
+}
+
+.recipe-card h3{
+  font-size: 1.5em;
+  margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.view-more-button{
+  font-size: 1.5em;
+  padding: 1em;
+  font-weight: bold;
+  margin: auto;
+}
+
+.app-container{
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  padding: 2em;
+}
+
+.header{
+  position: relative;
+}
+
+.header img{
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  object-position: center;
+  opacity: 50%;
+  border-radius: 1em;
+}
+
+.title{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 2em;
+  text-align: center;
+  background-color: black;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  opacity: 80%;
+  padding: 0.5em 1.5em 0.5em 1.5em;
+}
+
 .overlay{
   position: fixed;
   top: 0;
@@ -42,4 +157,16 @@
   padding: 2em;
   border-radius: 4px;
   max-width: 500px;
+}
+
+.tabs{
+  display: flex;
+  gap: 2em;
+  cursor: pointer;
+}
+
+.recipe-card-title{
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
 }
